# TractEdit

./: .gitattributes  .gitignore  CITATION.cff  README.md  Tractedit  main.py  pyproject.toml  requirements.txt  tox.ini
.github/scripts/linux/: hook-numpy.py  io.github.tractedit.appdata.xml  tractedit.desktop  tractedit.spec
.github/scripts/macos/: tractedit.spec
.github/scripts/windows/: tractedit.spec
.github/workflows/: build-releases.yml
sample_data/: AF_left.tck  AF_left.vtk  AF_left.vtp  AF_left_MNI.tck  AF_left_MNI.trk  AF_right.tck  AF_right.trk  AF_right.trx  AF_right_MNI.tck  AF_right_MNI.trk  CA.tck  CA.trk  CA.trx  SLF_I_left.tck  SLF_I_left.trk  SLF_I_left.trx  SLF_I_left_MNI.tck  SLF_I_left_MNI.trk  SLF_I_right.tck  SLF_I_right.trk  SLF_I_right.trx  SLF_I_right_MNI.tck  SLF_I_right_MNI.trk
tests/: __init__.py  conftest.py  test_file_io_helpers.py  test_fill_polygon.py  test_odf_utils.py  test_utils.py
tractedit_pkg/: __init__.py  file_io.py  main_window.py  odf_utils.py  utils.py  vtk_panel.py
tractedit_pkg/logic/: __init__.py  connectivity.py  roi_manager.py  scalar_manager.py  state_manager.py
tractedit_pkg/ui/: __init__.py  actions.py  data_panel.py  drawing_modes.py  theme_manager.py  toolbars.py
tractedit_pkg/visualization/: __init__.py  actors.py  coordinates.py  drawing.py  html_export.py  interactor.py  scale_bar.py  scene_manager.py  selection.py  streamlines.py  vtk_panel.py
