[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tractedit"
version = "2.0.1" 
authors = [
    { name = "Marco Tagliaferri", email = "marco.tagliaferri@unitn.it" },
    { name = "Marco Tagliaferri", email = "marco.tagliaferri93@gmail.com" },
]
description = "A Python-based graphical interface for interactively viewing, selecting, and editing tractography bundles in .trk, .tck and .trx formats."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8, <3.12" 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
]

# Dependencies
dependencies = [
    "PyQt6==6.7.0",
    "vtk==9.2.6",
    "fury==0.12.0",
    "nibabel==5.2.1",
    "numpy==1.26.4",
    "pytz==2024.1",
    "trx-python==0.3",
]

# Command-line script 'tractedit'
[project.scripts]
tractedit = "main:main"

[project.urls]
Homepage = "https://github.com/marcotag93/TractEdit"
Bug-Tracker = "https://github.com/marcotag93/TractEdit/issues"

[tool.setuptools]
packages = ["tractedit_pkg"]
py-modules = ["main"]
[tool.setuptools.package-data]
"tractedit_pkg" = ["assets/*"]