[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tractedit"
version = "3.2.0"
authors = [
    { name = "Marco Tagliaferri", email = "marco.tagliaferri@unitn.it" },
    { name = "Marco Tagliaferri", email = "marco.tagliaferri93@gmail.com" },
]
description = "A Python-based graphical interface for interactively viewing, selecting, and editing tractography bundles in .trk, .tck and .trx formats."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
]

# Runtime dependencies - minimum tested versions (PEP 440 compliant)
# Officially supports Python 3.11 only
dependencies = [
    "PyQt6==6.7.0",
    "PyQt6-Qt6==6.7.3",
    "vtk==9.2.6",
    "fury==0.12.0",
    "nibabel==5.3.3",
    "numpy==2.3.5",
    "numba==0.63.1",
    "scipy==1.16.3",
    "pytz==2025.2",
    "trx-python==0.3",
]

# Optional dependency groups
[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xvfb>=3.0",
    "tox>=4.0",
]
dev = [
    "tractedit[test]",
    "black>=23.0",
    "flake8>=6.0",
]

# Command-line script 'tractedit'
[project.scripts]
tractedit = "main:main"

[project.urls]
Homepage = "https://github.com/marcotag93/TractEdit"
Bug-Tracker = "https://github.com/marcotag93/TractEdit/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["tractedit_pkg*"]

[tool.setuptools.package-data]
"tractedit_pkg" = ["assets/*"]
