[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tractedit"
version = "3.2.0"
description = "A Python-based graphical interface for interactively viewing, selecting, and editing tractography bundles in .trk, .tck and .trx formats."
authors = [
    "Marco Tagliaferri <marco.tagliaferri@unitn.it>",
    "Marco Tagliaferri <marco.tagliaferri93@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/marcotag93/TractEdit"
repository = "https://github.com/marcotag93/TractEdit"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
]
packages = [
    { include = "tractedit_pkg" },
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PyQt6 = "6.7.0"
PyQt6-Qt6 = "6.7.3"
vtk = "9.2.6"
fury = "0.12.0"
nibabel = "5.3.3"
numpy = "2.3.5"
numba = "0.63.1"
scipy = "1.16.3"
pytz = "2025.2"
trx-python = "0.3"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
pytest-xvfb = ">=3.0"
tox = ">=4.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0"
flake8 = ">=6.0"

[tool.poetry.scripts]
tractedit = "main:main"

[tool.poetry.urls]
Bug-Tracker = "https://github.com/marcotag93/TractEdit/issues"
